Browserstack test mark pass/fail